# Messager-cxx

./: .gitignore  README.md
Backend/: CMakeLists.txt  CMakePresets.json  main.cpp
Backend/Docker/: Dockerfile  docker-compose.yml
Backend/Service/: Server.cpp  Server.hpp  Session.cpp  Session.hpp
Backend/Service/Database/: Session.cpp  Session.hpp
Backend/Service/Database/Models/: Message.cpp  Message.hpp  User.cpp  User.hpp
Client/: CMakeLists.txt  main.cpp
Client/Service/: Client.cpp  Client.hpp
